[package]
name = "app-memory-tooltip"
version = "0.1.0"
edition = "2021"
description ="A tool that shows an app's memory usage when you hover over its icon in the taskbar"

[[bin]]
name = "memhover"
path = "src/main.rs"

[profile.release]
opt-level = "z"     
lto = true          # Link Time Optimization لتقليل الحجم أكثر
codegen-units = 1
panic = "abort"
strip = true        

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Accessibility", # مضافة خصيصاً لدعم UI Automation
    "Win32_System_Com",
    "Win32_Graphics_Dwm",
] }

[build-dependencies]
winres = "0.1"
